--- a/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/RB_CTMC_Tutorial_content.tex
@@ -34,6 +34,20 @@ We assume that you have read and hopefully completed the following tutorials:
 
 
 
+%%%%%%%%
+%%   Data   %%
+%%%%%%%%
+\section{Data and files}
+
+We provide several data files which we will use in this tutorial.
+You may want to use your own data instead.
+In the \cl{data} folder, you will find the following files
+\begin{itemize}
+\item
+\cl{primates_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
+\end{itemize}
+
+
 %
 %\subsection*{Analysis Functions}
 %
@@ -120,11 +134,11 @@ To report the current value of any variable, simply type the variable name and p
 {\tt \begin{snugshade*}
 \begin{lstlisting}
 data
-|*   DNA character matrix with 24 taxa and 1141 characters
+|*   DNA character matrix with 23 taxa and 1141 characters
 |*   =====================================================
 |*   Origination:                      primates_cytb.nex
-|*   Number of taxa:                   24
-|*   Number of included taxa:          24
+|*   Number of taxa:                   23
+|*   Number of included taxa:          23
 |*   Number of characters:             1141
 |*   Number of included characters: 1141
 |*   Datatype:                         DNA
