--- a/tutorial_TeX/RB_Manual.tex
+++ b/tutorial_TeX/RB_Manual.tex
@@ -46,30 +46,46 @@ John P. Huelsenbeck
 \def \GlobalResourcePath {./}
 
 \part{Getting Started with RevBayes}
+
 \chapter{Introcution}
 \def \ResourcePath {RB_Getting_Started/}
 \include{RB_Getting_Started/RB_Getting_Started_content}
+
 \chapter{Basic Commands}
 \def \ResourcePath {RB_Basics_Tutorial/}
 \include{RB_Basics_Tutorial/RB_Basics_Tutorial_content}
 
+\chapter{Reading and manipulating data}
+\def \ResourcePath {RB_Data_Tutorial/}
+\include{RB_Data_Tutorial/RB_Data_Tutorial_content}
+
+
 
 \part{Models of Molecular Evolution}
+
 \chapter{Continuous Time Markov Model for Discrete Character Evolution}
 \def \ResourcePath {RB_CTMC_Tutorial/}
 \include{RB_CTMC_Tutorial/RB_CTMC_Tutorial_content}
 
+\chapter{Data Partitioning}
+\def \ResourcePath {RB_Partition_Tutorial/}
+\include{RB_Partition_Tutorial/RB_Partition_Tutorial_content}
+
+
+
 \part{Inference}
+
 \chapter{Markov chain Monte Carlo Algorithms}
 \include{RB_MCMC_Tutorial/RB_MCMC_Tutorial_content}
-
 
 \chapter{Model Selection and Bayes Factors}
 \include{RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content}
 
+
 \part{Dating}
 \chapter{Dating and Relaxed Clocks}
 \include{RB_RelaxedClock_Tutorial/RB_RelaxedClock_Tutorial_content}
+
 
 \part{Diversification Rate Estimation}
 \chapter{Simple Diversification Rate Estimation}
@@ -79,6 +95,8 @@ John P. Huelsenbeck
 \part{Gene tree - Species tree estimation}
 \chapter{Gene tree - Species tree estimation}
 \include{RB_GTST_Tutorial/RB_GTST_Tutorial_content}
+
+
 
 \part{Biogeography}
 \chapter{Many Area DEC}
