--- a/tutorial_TeX/RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial.tex
+++ b/tutorial_TeX/RB_PhyloComparative_Tutorial/RB_PhyloComparative_Tutorial.tex
@@ -1,53 +1,24 @@
-\documentclass[usletter]{article}
-\usepackage[latin1]{inputenc}
-%\usepackage[french]{babel}
-%\usepackage{t1enc}
-%\usepackage[francais]{babel}
-
-\usepackage{vmargin}
-\usepackage{amssymb,amstext,amsmath}
-\usepackage{hyperref}
-\usepackage{epsfig}
-\usepackage{array}
-\usepackage{color}
-\usepackage{xspace}
-
-\usepackage{latexsym}
-
-\usepackage{tikz} 
-
-\usepgflibrary{shapes.misc} 
-
-\newcommand{\cmd}[1]{\texttt{#1}}
-
-%\newtheorem{command}{Command}{\bfseries}{\normalfont}
-
-\usepackage{natbib}
-
-
-\renewcommand{\baselinestretch}{1.5}
-
-\title{RevBayes -- Phylogenies and the comparative method}
-
-\author{Nicolas Lartillot}
-
+\documentclass[11pt]{article}
+\input{../preamble}
 
 \begin{document}
-\maketitle
+\renewcommand{\headrulewidth}{0.5pt}
+\headsep = 20pt
+\lhead{ }
+\rhead{\textsc {\RevBayes~Tutorial --- Comparative Method}}
+\author{Nicolas Lartillot}
+\thispagestyle{plain}
+\begin{center}
 
-\input{RB_PhyloComparative_Tutorial}
+\textbf{\LARGE Phylogenetic Inference using \RevBayes}\\\vspace{2mm}
+\textbf{\it{\Large Phylogenies and the comparative method}}\\\vspace{2mm}
+\end{center}
 
-\bibliographystyle{natbib}
+\def \ResourcePath {./}
+\def \GlobalResourcePath {../}
+\input{RB_PhyloComparative_Tutorial_content}
 
-\bibliography{allbib}
+Version dated: \today
 
-\end{document}  
 
-\subsection*{Testing diversification models}
-
-make an integrated diversification studies and comparative analysis: combining phylogenetic estimation, dating, reconstruction of body size evolution and test of a diversification model in the case of placentals: in their case, a good model to test would be a skyline birth death or, perhaps more interestingly, a burst and stasis model, with the burst occurring right at KT.
-
-\subsection*{Comparative analysis and incomplete lineage sorting}
-
-Let the generation time $t$, the mutation rate per generation $u$ and the effective population size $N_e$ be a joint multivariate (log-normal) Brownian process along the species tree. Then, plug $(N_e t)^{-1}$ as the coalescence rate within the ILS model, and $u / t$ as the substitution rate per calendar unit of time in the substitution model running along gene genealogies. Of course, all this can be correlated with body size and life-history traits. Predictions are: $N_e$ correlates negatively, $t$ positively and $u$ positively (but $u / t$ negatively) with body-size. Nice allometric analysis of ILS...
-
+\end{document}
