Updating the pdf's for the CTMC and Bayes factor tutorial.

--- a/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
+++ b/tutorial_TeX/RB_BayesFactor_Tutorial/RB_BayesFactor_Tutorial_content.tex
@@ -25,11 +25,11 @@ You may want to use your own data instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}
 \item
-\cl{primates_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
+\cl{primates\_cytb.nex}: Alignment of the \textit{cytochrome b} subunit from 23 primates representing 14 of the 16 families (\textit{Indriidae} and \textit{Callitrichidae} are missing).
 \item
-\cl{primates_16s.nex}: Alignment of the \textit{16s ribosomal RNA} gene from the same 23 primates species.
+\cl{primates\_16s.nex}: Alignment of the \textit{16s ribosomal RNA} gene from the same 23 primates species.
 \item
-\cl{primates_cox2.nex}: Alignment of the \textit{COX-2} gene from the same 23 primates species.
+\cl{primates\_cox2.nex}: Alignment of the \textit{COX-2} gene from the same 23 primates species.
 \end{itemize}
 
 
